[gd_scene load_steps=4 format=3 uid="uid://d0hwat12i2kka"]

[ext_resource type="Texture2D" uid="uid://b00j486ve3rat" path="res://icon.svg" id="1_7qym3"]
[ext_resource type="Script" path="res://enemies/dead_cultist.gd" id="1_fycvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyql6"]
size = Vector2(8, 2)

[node name="DeadCultist" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_fycvj")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(8.9407e-08, -8)
scale = Vector2(0.0625, 0.125)
texture = ExtResource("1_7qym3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_fyql6")

[node name="GroundCast" type="RayCast2D" parent="."]
position = Vector2(-7, -13)
target_position = Vector2(0, 15)

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
